kubernetes/virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nodejs-virtualservice
  namespace: istio-system
spec:
  hosts:
  - "*"
  gateways:
  - nodejs-gateway
  http:
  - route:
    - destination:
        host: nodejs-app-service.default.svc.cluster.local
        port:
          number: 8080
